# vectara-mcp

./: .env.example  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  __init__.py  pyproject.toml  requirements.txt  run-server.sh  server.py  setup.py
.github/workflows/: publish-to-pypi.yml
tests/: test_agents.py  test_api_key_management.py  test_connection_manager.py  test_health_checks.py  test_integration.py  test_server.py
vectara_mcp/: __init__.py  __main__.py  _version.py  agents.py  auth.py  connection_manager.py  health_checks.py  retry_logic.py  server.py
