[project]
name = "vectara-mcp"
version = "0.1.4"
description = "A Model Context Protocol (MCP) server that provides capabilities using Vectara's RAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "uvicorn>=0.34.0",
    "vectara>=0.3.5",
]

[build-system]
requires = ["setuptools==67.8.0"]
build-backend = "setuptools.build_meta"