[project]
name = "vectara-mcp"
version = "0.1.6"
description = "A Model Context Protocol (MCP) server that provides tools from Vectara"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "uvicorn>=0.34.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools==67.8.0"]
build-backend = "setuptools.build_meta"